deleted useless js files

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -87,6 +87,7 @@ font-size: 30px;
    
   }
 
+
 .modalItem{
    background-color:#ffc000; 
 
@@ -129,6 +130,16 @@ font-size: 30px;
   border-radius: 10px;
   border:3px solid red;
 }
+.div-item-inner-red2 {
+  margin-top:5px;
+  margin-bottom:5px;
+  margin-left:5px;
+  margin-right:5px;
+  border-radius: 10px;
+  border:3px solid red;
+}
+
+
 
 
 
