changes for android 31

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -28,7 +28,7 @@
       </ion-item>
       <ion-item class="cookie30 " menuClose (click)="openPurchasePage()">
          <i class="fa fa-shopping-cart fa-1x" ></i>
-        <span style=" margin: 0 15px;">{{ 'Purchase' | translate }}</span>
+        <span style=" margin: 0 15px;">{{ 'Paypal donate' | translate }}</span>
       </ion-item>
       <ion-item class="cookie30 " menuClose (click)="openHomePage()">
         <i class="fa fa-leanpub fa-1x" ></i>
