branche de gestion des accordages

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -19,7 +19,7 @@
         <span style=" margin: 0 15px;">{{ 'Voicings list' | translate }}</span>
       </ion-item >
      
-      <ion-item  class="cookie30 " menuClose (click)="openChordagePage()">
+      <ion-item  class="cookie30 " menuClose (click)="openTunningPage()">
       <div>
         <i class="fa fa-sliders fa-1x" ></i>
         <span style=" margin: 0 15px;">{{ 'Guitar tuning' | translate }}</span>
